Bugfix menuitems align iphone

--- a/src/components/navigation/Nav.module.scss
+++ b/src/components/navigation/Nav.module.scss
@@ -16,7 +16,6 @@
   box-sizing: border-box;
   margin: 0;
   padding-left: 0;
-  text-indent: 0;
   display: flex;
   flex-direction: column;
   align-items: center;
